<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/general">


        <menu>
            <item
                android:id="@+id/nav_drawer_report_issue"
                android:icon="@drawable/report_issue_icon"
                android:title="@string/report_issue" />
        </menu>
    </item>

    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/nav_drawer_sign_out"
                android:icon="@drawable/logout"
                android:title="@string/sign_out"
             />
        </menu>
    </item>
</menu>