<resources>
    <string name="app_name">IGift</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="signin">SIGNIN</string>
    <string name="social_signup">Social signup</string>
    <string name="new_user">New user?</string>
    <string name="signup">Sign up</string>

    <string name="required_field">This field is required</string>


    <string name="facebook_app_id">738297410191075</string>
    <string name="fb_login_protocol_scheme">fb738297410191075</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="create_a_group">Create a group</string>
    <string name="welcome">Welcome</string>
    <string name="join_a_group">Join a Group</string>
    <string name="search_for_an_existing_group">Search for an existing group</string>
    <string name="start_a_group_for_your_family">Start a group for your family</string>
    <string name="name_this_group">Name this group</string>
    <string name="your_members_see_this_group">Your members see this group</string>
    <string name="e_g_henderson_fam">E.g: Henderson Fam</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="my_list">My list</string>
    <string name="title_dashboard">Groups</string>
    <string name="title_notifications">Calendar</string>
    <string name="email">Email</string>
    <string name="create_group">Create Group</string>
    <string name="password_greater_then_6_char">Password must be greater then 6 digit</string>
    <string name="invalid_email">Invalid email</string>
    <string name="forgot_passwrod2">Forgot passwrod</string>
    <string name="connect">Connect</string>
    <string name="logout">Logout</string>
    <string name="sign_out">Sign out</string>
    <string name="report_issue">Report issue</string>
    <string name="general">General</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="settings">Settings</string>
    <string name="find_group">Find group</string>
    <string name="find_other_members_view_public_gift_preferences_and_wish_lists">Find other members groups and wish lists. Search by user email address.</string>
    <string name="enter_the_user_email">Enter the user email</string>
    <string name="join">Join</string>
    <string name="name_this_list">Name this list</string>
    <string name="create_list">Create List</string>
    <string name="create_a_name_for_the_list_which_will_be_share_with_your_friends_in_the_joined_groups">Create a name for the list which will be share with your friends in the joined groups</string>
    <string name="my_birthday">My birthday</string>
    <string name="gift_name">Gift name</string>
    <string name="phone">Phone</string>
    <string name="price">Price</string>
    <string name="where_to_buy">Where To Buy</string>
    <string name="any_apple_store">Any Apple Store</string>
    <string name="description">Description</string>
    <string name="add_item">Add item</string>
    <string name="event">Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notify_me">Notify me</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="delete">Delete</string>

</resources>