<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_group_fragment_container"
    tools:context=".ui.connect.creategroup.CreateGroupFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="211dp"
        android:layout_height="102dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/new_group_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="68dp"
        android:text="@string/name_this_group"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/your_members_see_this_group"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputTextCreateGroupName"
        android:layout_width="334dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:hint="@string/e_g_henderson_fam"/>



    <Button
        android:id="@+id/createGroupButton"
        android:layout_width="205dp"
        android:layout_height="54dp"
        android:layout_marginTop="52dp"
        android:text="@string/create_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTextCreateGroupName"
        app:layout_constraintVertical_bias="0.110000014"
        />
</androidx.constraintlayout.widget.ConstraintLayout>